# docs/swagger.json
@@ -35,6 +35,44 @@
                 }
             }
         },
+        "/api/weather/daily": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Weather"
+                ],
+                "summary": "Getting Daily Weather Info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Location (ex. 'Moscow')",
+                        "name": "location",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Date (ex. '2000-05-30')",
+                        "name": "date",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/weather/hourly": {
             "get": {
                 "consumes": [
