# internal/infrastructure/router/router.go
@@ -13,6 +13,7 @@ func NewRouter(app *fiber.App, ctl *controller.AppController) *fiber.App {
 	api := app.Group("/api")
 	GetCurrentWeather(api, ctl)
 	GetHourlyWeather(api, ctl)
+	GetDailyWeather(api, ctl)
 
 	return app
 }
@@ -41,5 +42,19 @@ func GetCurrentWeather(api fiber.Router, ctl *controller.AppController) fiber.Ro
 // @Success        200                {string}    string
 // @Router         /api/weather/hourly [get]
 func GetHourlyWeather(api fiber.Router, ctl *controller.AppController) fiber.Router {
-	return api.Get("/weather/hourly", ctl.WeatherController.GetHourlyWeather())
+	return api.Get("/weather/dailt", ctl.WeatherController.GetHourlyWeather())
+}
+
+// GetWeatherInfo Getting Daily Weather Info
+//
+// @Summary        Getting Daily Weather Info
+// @Tags           Weather
+// @Accept         json
+// @Produce        json
+// @Param          location  query  string    true    "Location (ex. 'Moscow')"
+// @Param          date  query  string    true    "Date (ex. '2000-05-30')"
+// @Success        200                {string}    string
+// @Router         /api/weather/daily [get]
+func GetDailyWeather(api fiber.Router, ctl *controller.AppController) fiber.Router {
+	return api.Get("/weather/daily", ctl.WeatherController.GetDailyWeather())
 }
